--- a/README.rdoc
+++ b/README.rdoc
@@ -1,72 +1,3 @@
-= EPP v1.4.0 (by {Ultraspeed}[http://ultraspeed.co.uk])
+= EPP v 0.0.1 (by {Syctree}[http://www.synctree.com)
 
-The EPP gem provides basic functionality for connecting and making requests on EPP (Extensible Provisioning Protocol) servers. It has been fully tested against the RFC 5730 & 5734 specification.
-
-Added client-side SSL certificate certificate (tgenov)
-
-Currently, major providers Centralnic and Nominet have been integrated using this gem. CoCCA is currently in testing.
-
-* {Nominet Standard EPP Documentation}[http://www.nominet.org.uk/registrars/systems/standardepp/]
-* {Centralnic Labs EPP Documentation}[http://labs.centralnic.com/epp/]
-
-== Installation
-
-You can install this gem with:
-
-    $ gem install epp
-    
-Then, you can require it in your Ruby/Rails app:
-
-    require "epp"
-    
-If you're using Rails, configure your gem in the following file:
-
-    # Rails 2.x - config/environment.rb
-    config.gem "epp"
-    
-    # Rails 3 - Gemfile
-    gem "epp"
-
-== Example Usage
-
-First, you must initialize an Epp::Server object to use. This requires the EPP server address, tag/username and password:
-
-    server = Epp::Server.new(
-      :server => "testbed-epp.nominet.org.uk",
-      :tag => "TESTING",
-      :password => "testing"
-    )
-    
-If no port is specified, it will be assumed that you will be using port 700.
-
-You would then make an XML request to the server. 
-
-    xml       = "<?xml ... </epp>"
-    response  = server.request(xml)
-  
-You can build this however you'd like, although we prefer Hpricot. The process is as follows:
-
-* Connect to EPP server and receive the <greeting> frame
-* Send a standard <login> request
-* Send your request
-* Send a standard <logout> request
-* Disconnect the socket from the server
-
-The EPP module would then return the XML response as a string. In this example, the response XML would be set equal to <tt>response</tt> for your usage.
-
-Once the request is complete, it will automatically close the connection. For simplicity purposes, this plug-in will *not* use a persistent connection to the EPP server. This may change in future releases, as some registries require that persistent connections be supported. Please feel free to email me to collaborate on making this possible.
-
-== Bugs/Issues
-
-Please report all issues using the GitHub issue tracker at:
-
-http://github.com/ultraspeed/epp/issues
-
-== Credit
-
-Author: Josh Delsman (http://twitter.com/voxxit)
-Inspired from: http://labs.centralnic.com/Net_EPP_Client.php
-
-== License
-
-See the LICENSE file.
+Registry EPP command gem for Verisign (com, net), Namestore (cc, tv), Public Interest Registry (org), Afilias (info) and Neustar (biz, us) registries.
